# weather-cli

./: Cargo.toml  readme.md  weather.json
src/: get_ip.rs  get_location.rs  get_weather.rs  get_weather_type_from_code.rs  main.rs  weather_now.rs
